src/objects/SMS_Gateway_Country_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>The settings for an SMS Gateway based on country</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISO_Standard__c</fullName>
        <label>ISO Standard Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sms Gateway Country Settings</label>
</CustomObject>